fixed blurred overlay while on error

--- a/styles/components-styles.css
+++ b/styles/components-styles.css
@@ -35,3 +35,9 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: #999;
 }
+
+.blurOverlay {
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  background-color: #fff5;
+}
